# src/main/java/co/edu/uniquindio/triage/dto/request/CambiarEstadoRequest.java
@@ -10,12 +10,16 @@ public class CambiarEstadoRequest {
 
     private String observacion;
 
+    @NotNull(message = "El usuarioId es obligatorio.")
+    private Long usuarioId;
+
     public CambiarEstadoRequest() {
     }
 
-    public CambiarEstadoRequest(EstadoSolicitud nuevoEstado, String observacion) {
+    public CambiarEstadoRequest(EstadoSolicitud nuevoEstado, String observacion, Long usuarioId) {
         this.nuevoEstado = nuevoEstado;
         this.observacion = observacion;
+        this.usuarioId = usuarioId;
     }
 
     public EstadoSolicitud getNuevoEstado() {
@@ -32,5 +36,13 @@ public class CambiarEstadoRequest {
 
     public void setObservacion(String observacion) {
         this.observacion = observacion;
+    }
+
+    public Long getUsuarioId() {
+        return usuarioId;
+    }
+
+    public void setUsuarioId(Long usuarioId) {
+        this.usuarioId = usuarioId;
     }
 }
